took out position relative to fix the spacing error on base screen size

--- a/css/main.css
+++ b/css/main.css
@@ -101,17 +101,6 @@ img {
   margin-top: 0;
 }
 
-.img-flex {
-  position: relative;
-  width: 100%;
-}
-
-.online-img {
-  position: relative;
-  width: 50%;
-  margin-left: 4rem;
-}
-
 .btn {
   display: inline-block;
   color: #fff;
